--- a/notebooks/Fitting_model.ipynb
+++ b/notebooks/Fitting_model.ipynb
@@ -2,32 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/26 14:45:44 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.178.12 instead (on interface en0)\n",
-      "22/09/26 14:45:44 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "22/09/29 10:39:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/26 14:45:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/26 14:45:45 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/26 14:45:45 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -50,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,9 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "mean_Take_rate = float(final.agg({\"Take_rate\": \"mean\"}).collect()[0][0])\n",
     "sd_Take_rate = float(final.agg({\"Take_rate\": \"stddev_pop\"}).collect()[0][0])\n",
@@ -211,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,26 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4026"
+       "3667"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/26 19:34:22 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 342810 ms exceeds timeout 120000 ms\n",
-      "22/09/26 19:34:22 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
-     ]
     }
    ],
    "source": [
@@ -289,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4026"
+       "3667"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,11 +291,100 @@
    "source": [
     "final_df2.count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rank inside each column and add up the rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['merchant_abn', 'rank_count_of_bigorder', 'rank_Avg_amount_monthly', 'rank_Avg_count_monthly', 'rank_Order_avg_value', 'rank_avg_prob_fraud_cus', 'rank_num_of_fraud', 'rank_count_cus_per_mon', 'rank_fix_cus_num', 'rank_avg_income_percentage', 'rank_avg_age_percentage']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "22/09/29 10:49:32 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+----------------------+-----------------------+----------------------+--------------------+-----------------------+-----------------+----------------------+----------------+--------------------------+-----------------------+------------+----+\n",
+      "|merchant_abn|rank_count_of_bigorder|rank_Avg_amount_monthly|rank_Avg_count_monthly|rank_Order_avg_value|rank_avg_prob_fraud_cus|rank_num_of_fraud|rank_count_cus_per_mon|rank_fix_cus_num|rank_avg_income_percentage|rank_avg_age_percentage|sum_of_ranks|rank|\n",
+      "+------------+----------------------+-----------------------+----------------------+--------------------+-----------------------+-----------------+----------------------+----------------+--------------------------+-----------------------+------------+----+\n",
+      "| 19492220327|                     1|                     36|                  1278|                 103|                    179|               78|                  1277|             121|                       192|                     16|        3281|   1|\n",
+      "| 38700038932|                    36|                     11|                   388|                 580|                   1817|               54|                   385|             121|                         6|                     73|        3471|   2|\n",
+      "| 27326652377|                    36|                     56|                   421|                 710|                   1277|               58|                   420|             121|                       392|                     18|        3509|   3|\n",
+      "| 99291944648|                    36|                     43|                   178|                1239|                   1578|               45|                   177|             109|                        35|                    149|        3589|   4|\n",
+      "| 31334588839|                     5|                     38|                  1047|                 164|                    725|               76|                  1041|             121|                       312|                    170|        3699|   5|\n",
+      "| 40515428545|                    36|                     46|                   217|                1127|                   1367|               52|                   213|             116|                       406|                    153|        3733|   6|\n",
+      "| 50315283629|                    36|                     10|                    67|                1656|                   1657|               26|                    65|              65|                        36|                    121|        3739|   7|\n",
+      "| 99514198047|                    36|                    234|                   785|                1254|                    679|               69|                   782|             121|                       124|                     10|        4094|   8|\n",
+      "| 63817709749|                    36|                    109|                   408|                1242|                   1017|               53|                   403|             121|                       322|                    452|        4163|   9|\n",
+      "| 15043504837|                     3|                    108|                  1666|                  41|                     68|               78|                  1667|             121|                       432|                      5|        4189|  10|\n",
+      "| 34096466752|                    36|                     21|                   137|                1233|                   1903|               34|                   135|             108|                       334|                    306|        4247|  11|\n",
+      "| 25732256442|                    36|                    115|                   201|                2079|                   1174|               39|                   200|             119|                       224|                     82|        4269|  12|\n",
+      "| 77590625261|                    36|                     41|                    91|                1737|                   1869|               28|                    89|              81|                       224|                     82|        4278|  13|\n",
+      "| 80551528183|                    36|                     32|                   353|                 659|                   2087|               60|                   350|             121|                       170|                    454|        4322|  14|\n",
+      "| 66228393506|                     9|                    374|                  1745|                  73|                    148|               78|                  1746|             121|                        75|                      7|        4376|  15|\n",
+      "| 41271931352|                    36|                    116|                   355|                1518|                   1531|               50|                   353|             121|                       224|                     82|        4386|  16|\n",
+      "| 48256546416|                    36|                    306|                   604|                1717|                    795|               62|                   602|             121|                       119|                     25|        4387|  17|\n",
+      "| 98518649381|                    36|                    104|                   657|                 802|                    873|               61|                   651|             121|                       660|                    473|        4438|  18|\n",
+      "| 32709545238|                    36|                      8|                   220|                 918|                   1350|               38|                   217|             114|                       788|                    798|        4487|  19|\n",
+      "| 20269486864|                    36|                     78|                   981|                 324|                   1838|               73|                   980|             121|                        13|                     50|        4494|  20|\n",
+      "+------------+----------------------+-----------------------+----------------------+--------------------+-----------------------+-----------------+----------------------+----------------+--------------------------+-----------------------+------------+----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "final_rank_coldf = final_1.drop(\"Take_rate\", \"Store_type\", \"Revenue_levels\")\n",
+    "for col in final_rank_coldf.columns:\n",
+    "    if col == \"merchant_abn\":\n",
+    "        continue\n",
+    "    elif col in [\"avg_prob_fraud_cus\", \"num_of_fraud\"]: #columns that have number smaller = higher rank\n",
+    "        final_rank_coldf = final_rank_coldf.withColumn(\"rank_\"+col, F.dense_rank().over(Window.orderBy(col))).drop(col)\n",
+    "    else: #columns that have number bigger = higher rank\n",
+    "        final_rank_coldf = final_rank_coldf.withColumn(\"rank_\"+col, F.dense_rank().over(Window.orderBy(F.desc(col)))).drop(col)\n",
+    "\n",
+    "numeric_col = final_rank_coldf.columns\n",
+    "numeric_col.remove(\"merchant_abn\")\n",
+    "expression = '+'.join(numeric_col)\n",
+    "\n",
+    "final_rank_coldf = final_rank_coldf.withColumn(\"sum_of_ranks\", F.expr(expression))\\\n",
+    "    .withColumn(\"rank\", F.dense_rank().over(Window.orderBy(\"sum_of_ranks\")))\n",
+    "final_rank_coldf.orderBy(\"rank\").show(20)    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ads')",
+   "display_name": "Python 3.7.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -324,12 +398,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
+    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
    }
   }
  },
